# GameEngineScratch

./: CMakeLists.txt  Makefile  README.md  linux.clang.toolchain.cmake
Framework/: Makefile  cmake_install.cmake
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.hpp  Makefile  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
Platform/: CMakeLists.txt  Makefile  PlatformApplication.cpp  cmake_install.cmake
Platform/Linux/: helloengine_opengl.c  helloengine_xcb.c
Platform/Windows/: helloengine_d2d.cpp  helloengine_win.c
